Set bash as default terminal profile on linux

--- a/settings.json
+++ b/settings.json
@@ -33,4 +33,5 @@
         }
     },
     "terminal.integrated.defaultProfile.windows": "Powershell (VSCode)",
+    "terminal.integrated.defaultProfile.linux": "bash",
 }
